# rcroc

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
specs/: implement.md  spec.md
src/: cli.rs  compress.rs  discover.rs  error.rs  hash.rs  main.rs  mnemonic.rs  models.rs  net.rs  ui.rs
src/client/: mod.rs  receiver.rs  resume.rs  sender.rs
src/crypto/: aes_gcm.rs  key_derivation.rs  mod.rs
src/protocol/: comm.rs  message.rs  mod.rs  pake.rs
src/relay/: mod.rs
tests/: transfers_negotiation.rs
