[package]
name = "rcroc"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
globset = "0.4"
hex = "0.4"
p256 = { version = "0.13", features = ["ecdh"] }
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-socks = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
